[gd_scene load_steps=3 format=3 uid="uid://cyqxa1amls0et"]

[ext_resource type="Script" uid="uid://cvofikqg3uish" path="res://Menu/GamePreview.gd" id="1_6av1v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6av1v"]
bg_color = Color(0.215686, 0.196078, 0.176471, 1)

[node name="GamePreview" type="Node2D"]
script = ExtResource("1_6av1v")

[node name="Info" type="Node2D" parent="."]
position = Vector2(576, 324)

[node name="PanelContainer" type="PanelContainer" parent="Info"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6av1v")

[node name="MarginContainer" type="MarginContainer" parent="Info/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Info/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Panel" type="PanelContainer" parent="Info/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Deck:"

[node name="DeckName" type="Label" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="DeckOrder" type="Label" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="CardNames" type="HBoxContainer" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Panel2" type="PanelContainer" parent="Info/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel2/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel2/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel2/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Rounds:"

[node name="Rounds" type="Label" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel2/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel2/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Tricks:"

[node name="Tricks" type="Label" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel2/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="WinCondition" type="Label" parent="Info/PanelContainer/MarginContainer/VBoxContainer/Panel2/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Info/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="Info/PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
focus_mode = 0
text = "Start"

[connection signal="pressed" from="Info/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/Start" to="." method="_on_start_pressed"]
